Add a "get City by ID" endpoint to the CIS
